# python-project-template

./: LICENSE  pyproject.toml
.github/workflows/: ci-lint.yml  ci-test.yml  release.yml
src/mock_project/: example.py
templates/: changelog.md.j2
tests/: test_example.py
